--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 <groupId>com.mkyong</groupId>
 <artifactId>NumberGenerator</artifactId>
 <packaging>jar</packaging>
-<version>1.0.1</version>
+<version>1.0.0</version>
 <name>NumberGenerator</name>
 <properties>
 <jdk.version>1.7</jdk.version>
@@ -44,13 +44,14 @@
 <repository>
 <id>package</id>
 <url>
-http://13.235.89.67:8081/repository/package/
+http://65.1.128.178:8081/repository/package/
 </url>
 </repository>
 <snapshotRepository>	
 <id>snapshot</id>
 <url>
-http://13.235.89.67:8081/repository/snapshot/</url>
+http://65.1.128.178:8081/repository/snapshot/
+</url>
 </snapshotRepository>
 </distributionManagement>
 </project>
